Unfix the last two "fixes"
Why is it broken on localhost though?

--- a/assets/styles/_social.scss
+++ b/assets/styles/_social.scss
@@ -36,22 +36,6 @@
       color: white;
     }
     
-    &.icon-facebook {
-      padding-left: 2.1rem; 
-    }
-    &.icon-twitter {
-      padding-left: 1.5rem; 
-    }
-    &.icon-linkedin {
-      padding-left: 1.2rem; 
-    }
-    &.icon-pinterest {
-      padding-left: 0.5rem; 
-    }
-    &.icon-vimeo-square {
-      padding-left: 0.6rem; 
-    }
-    
     &.fa-blogger {
       background-image: url("../images/blogger-invert.svg") !important;
       background-repeat: no-repeat !important;
