--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -226,7 +226,7 @@ iframe {
 }
 
 .sponsor img {
-    max-width: 14rem;
+    max-width: 15rem;
     max-height: 9.29rem;
 }
 
